parser/PlantUMLParser.py
# Generated from ../grammar/PlantUML.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PlantUMLParser ( Parser ):

    grammarFileName = "PlantUML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@startuml'", "'@enduml'", "'class'", 
                     "'interface'", "'enum'", "'abstract'", "'static'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'+'", "'-'", "'#'", "'~'", 
                     "'{'", "'}'", "'('", "')'", "'['", "']'", "':'", "','" ]

    symbolicNames = [ "<INVALID>", "STARTUML", "ENDUML", "CLASS", "INTERFACE", 
                      "ENUM", "ABSTRACT", "STATIC", "EXTENDS_ARROW", "IMPLEMENTS_ARROW", 
                      "COMPOSITION_ARROW", "AGGREGATION_ARROW", "DEPENDENCY_ARROW", 
                      "ASSOCIATION_ARROW", "PLUS", "MINUS", "HASH", "TILDE", 
                      "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "COLON", "COMMA", "IDENTIFIER", "MULTIPLICITY", 
                      "STRING", "NUMBER", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_diagram = 0
    RULE_element = 1
    RULE_classDecl = 2
    RULE_interfaceDecl = 3
    RULE_enumDecl = 4
    RULE_classBody = 5
    RULE_classMember = 6
    RULE_visibility = 7
    RULE_attribute = 8
    RULE_method = 9
    RULE_paramList = 10
    RULE_param = 11
    RULE_type = 12
    RULE_relation = 13
    RULE_relationOp = 14
    RULE_label = 15

    ruleNames =  [ "diagram", "element", "classDecl", "interfaceDecl", "enumDecl", 
                   "classBody", "classMember", "visibility", "attribute", 
                   "method", "paramList", "param", "type", "relation", "relationOp", 
                   "label" ]

    EOF = Token.EOF
    STARTUML=1
    ENDUML=2
    CLASS=3
    INTERFACE=4
    ENUM=5
    ABSTRACT=6
    STATIC=7
    EXTENDS_ARROW=8
    IMPLEMENTS_ARROW=9
    COMPOSITION_ARROW=10
    AGGREGATION_ARROW=11
    DEPENDENCY_ARROW=12
    ASSOCIATION_ARROW=13
    PLUS=14
    MINUS=15
    HASH=16
    TILDE=17
    LBRACE=18
    RBRACE=19
    LPAREN=20
    RPAREN=21
    LBRACK=22
    RBRACK=23
    COLON=24
    COMMA=25
    IDENTIFIER=26
    MULTIPLICITY=27
    STRING=28
    NUMBER=29
    LINE_COMMENT=30
    BLOCK_COMMENT=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STARTUML(self):
            return self.getToken(PlantUMLParser.STARTUML, 0)

        def ENDUML(self):
            return self.getToken(PlantUMLParser.ENDUML, 0)

        def EOF(self):
            return self.getToken(PlantUMLParser.EOF, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLParser.ElementContext)
            else:
                return self.getTypedRuleContext(PlantUMLParser.ElementContext,i)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagram" ):
                listener.enterDiagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagram" ):
                listener.exitDiagram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = PlantUMLParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(PlantUMLParser.STARTUML)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67108984) != 0):
                self.state = 33
                self.element()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(PlantUMLParser.ENDUML)
            self.state = 40
            self.match(PlantUMLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(PlantUMLParser.ClassDeclContext,0)


        def interfaceDecl(self):
            return self.getTypedRuleContext(PlantUMLParser.InterfaceDeclContext,0)


        def enumDecl(self):
            return self.getTypedRuleContext(PlantUMLParser.EnumDeclContext,0)


        def relation(self):
            return self.getTypedRuleContext(PlantUMLParser.RelationContext,0)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = PlantUMLParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_element)
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.classDecl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.interfaceDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.enumDecl()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 4)
                self.state = 45
                self.relation()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(PlantUMLParser.CLASS, 0)

        def IDENTIFIER(self):
            return self.getToken(PlantUMLParser.IDENTIFIER, 0)

        def ABSTRACT(self):
            return self.getToken(PlantUMLParser.ABSTRACT, 0)

        def classBody(self):
            return self.getTypedRuleContext(PlantUMLParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_classDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDecl" ):
                listener.enterClassDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDecl" ):
                listener.exitClassDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = PlantUMLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 48
                self.match(PlantUMLParser.ABSTRACT)


            self.state = 51
            self.match(PlantUMLParser.CLASS)
            self.state = 52
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 53
                self.classBody()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(PlantUMLParser.INTERFACE, 0)

        def IDENTIFIER(self):
            return self.getToken(PlantUMLParser.IDENTIFIER, 0)

        def classBody(self):
            return self.getTypedRuleContext(PlantUMLParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_interfaceDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceDecl" ):
                listener.enterInterfaceDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceDecl" ):
                listener.exitInterfaceDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceDecl" ):
                return visitor.visitInterfaceDecl(self)
            else:
                return visitor.visitChildren(self)




    def interfaceDecl(self):

        localctx = PlantUMLParser.InterfaceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interfaceDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(PlantUMLParser.INTERFACE)
            self.state = 57
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18:
                self.state = 58
                self.classBody()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(PlantUMLParser.ENUM, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLParser.IDENTIFIER)
            else:
                return self.getToken(PlantUMLParser.IDENTIFIER, i)

        def LBRACE(self):
            return self.getToken(PlantUMLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PlantUMLParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLParser.COMMA)
            else:
                return self.getToken(PlantUMLParser.COMMA, i)

        def getRuleIndex(self):
            return PlantUMLParser.RULE_enumDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumDecl" ):
                listener.enterEnumDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumDecl" ):
                listener.exitEnumDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumDecl" ):
                return visitor.visitEnumDecl(self)
            else:
                return visitor.visitChildren(self)




    def enumDecl(self):

        localctx = PlantUMLParser.EnumDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enumDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(PlantUMLParser.ENUM)
            self.state = 62
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 63
            self.match(PlantUMLParser.LBRACE)
            self.state = 64
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25 or _la==26:
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==25:
                    self.state = 65
                    self.match(PlantUMLParser.COMMA)


                self.state = 68
                self.match(PlantUMLParser.IDENTIFIER)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(PlantUMLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PlantUMLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PlantUMLParser.RBRACE, 0)

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(PlantUMLParser.ClassMemberContext,i)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = PlantUMLParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(PlantUMLParser.LBRACE)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67354816) != 0):
                self.state = 77
                self.classMember()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(PlantUMLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(PlantUMLParser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(PlantUMLParser.MethodContext,0)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassMember" ):
                return visitor.visitClassMember(self)
            else:
                return visitor.visitChildren(self)




    def classMember(self):

        localctx = PlantUMLParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classMember)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.attribute()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.method()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VisibilityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(PlantUMLParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PlantUMLParser.MINUS, 0)

        def HASH(self):
            return self.getToken(PlantUMLParser.HASH, 0)

        def TILDE(self):
            return self.getToken(PlantUMLParser.TILDE, 0)

        def getRuleIndex(self):
            return PlantUMLParser.RULE_visibility

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVisibility" ):
                listener.enterVisibility(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVisibility" ):
                listener.exitVisibility(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVisibility" ):
                return visitor.visitVisibility(self)
            else:
                return visitor.visitChildren(self)




    def visibility(self):

        localctx = PlantUMLParser.VisibilityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_visibility)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 245760) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(PlantUMLParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PlantUMLParser.TypeContext,0)


        def visibility(self):
            return self.getTypedRuleContext(PlantUMLParser.VisibilityContext,0)


        def STATIC(self):
            return self.getToken(PlantUMLParser.STATIC, 0)

        def getRuleIndex(self):
            return PlantUMLParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = PlantUMLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 245760) != 0):
                self.state = 91
                self.visibility()


            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 94
                self.match(PlantUMLParser.STATIC)


            self.state = 97
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 98
            self.match(PlantUMLParser.COLON)
            self.state = 99
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(PlantUMLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PlantUMLParser.RPAREN, 0)

        def visibility(self):
            return self.getTypedRuleContext(PlantUMLParser.VisibilityContext,0)


        def STATIC(self):
            return self.getToken(PlantUMLParser.STATIC, 0)

        def ABSTRACT(self):
            return self.getToken(PlantUMLParser.ABSTRACT, 0)

        def paramList(self):
            return self.getTypedRuleContext(PlantUMLParser.ParamListContext,0)


        def COLON(self):
            return self.getToken(PlantUMLParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PlantUMLParser.TypeContext,0)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = PlantUMLParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 245760) != 0):
                self.state = 101
                self.visibility()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 104
                self.match(PlantUMLParser.STATIC)


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 107
                self.match(PlantUMLParser.ABSTRACT)


            self.state = 110
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 111
            self.match(PlantUMLParser.LPAREN)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 112
                self.paramList()


            self.state = 115
            self.match(PlantUMLParser.RPAREN)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 116
                self.match(PlantUMLParser.COLON)
                self.state = 117
                self.type_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLParser.ParamContext)
            else:
                return self.getTypedRuleContext(PlantUMLParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLParser.COMMA)
            else:
                return self.getToken(PlantUMLParser.COMMA, i)

        def getRuleIndex(self):
            return PlantUMLParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = PlantUMLParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.param()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 121
                self.match(PlantUMLParser.COMMA)
                self.state = 122
                self.param()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(PlantUMLParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PlantUMLParser.TypeContext,0)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = PlantUMLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 129
            self.match(PlantUMLParser.COLON)
            self.state = 130
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLParser.IDENTIFIER, 0)

        def LBRACK(self):
            return self.getToken(PlantUMLParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(PlantUMLParser.RBRACK, 0)

        def getRuleIndex(self):
            return PlantUMLParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = PlantUMLParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(PlantUMLParser.IDENTIFIER)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 133
                self.match(PlantUMLParser.LBRACK)
                self.state = 134
                self.match(PlantUMLParser.RBRACK)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLParser.IDENTIFIER)
            else:
                return self.getToken(PlantUMLParser.IDENTIFIER, i)

        def relationOp(self):
            return self.getTypedRuleContext(PlantUMLParser.RelationOpContext,0)


        def MULTIPLICITY(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLParser.MULTIPLICITY)
            else:
                return self.getToken(PlantUMLParser.MULTIPLICITY, i)

        def COLON(self):
            return self.getToken(PlantUMLParser.COLON, 0)

        def label(self):
            return self.getTypedRuleContext(PlantUMLParser.LabelContext,0)


        def getRuleIndex(self):
            return PlantUMLParser.RULE_relation
